Bug 544247 - Replace deprecated method calls to Class.newInstance()
Change-Id: I23a35632bd5ca673787549fbb1949008ac26846f
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>